--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Daniel Papsdorf
 description: Historian
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://history.duke.edu/sites/history.duke.edu/files/styles/faculty_summary_list/public/u14091_98.jpg?itok=BkvCz3l1
+avatar: /images/pic.jpg
 
 #
 # Flags below are optional
