Update website for first major version

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,10 @@ name: Daniel Papsdorf
 description: Historian
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/pic.jpg
+avatar: images/pic.jpg
+
+# The Current CV you want to use in the documents/ folder
+current-cv: "Papsdorf CV Summer 2016.pdf"
 
 #
 # Flags below are optional
@@ -41,13 +44,17 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: http://www.danielpapsdorf.com/
+url: file:///C:/Users/Ryan%20Poe/Desktop/Development/papsdorf.github.io/_site/
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: ""
+baseurl: file:///C:/Users/Ryan%20Poe/Desktop/Development/papsdorf.github.io/_site/
+
+# Custom collections for academics
+collections:
+  - publications
 
 #
 # !! You don't need to change any of the configuration flags below !!
