--- a/_config.yml
+++ b/_config.yml
@@ -44,13 +44,13 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: file:///C:/Users/Ryan%20Poe/Desktop/Development/papsdorf.github.io/_site/
+url: http://www.danielpapsdorf.com/
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: file:///C:/Users/Ryan%20Poe/Desktop/Development/papsdorf.github.io/_site/
+baseurl: http://www.danielpapsdorf.com/
 
 # Custom collections for academics
 collections:
