--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ current-cv: Papsdorf CV Fall 2016.pdf
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: dap29@duke.edu
+  email: daniel.papsdorf@duke.edu
   facebook:
   flickr:
   github:
