--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ avatar: images/pic.jpg
 current-cv: "Papsdorf CV Fall 2016.pdf"
 
 # The Current Teaching Philosophy you want to use in the documents/ folder
-# teaching philosophy: "Teaching Philosophy.pdf"
+teaching philosophy: "Teaching Philosophy.pdf"
 
 # Includes an icon in the footer for each username you enter
 footer-links:
